# manifold-rs

./: Cargo.toml  README.md  build.rs
examples/: bevy.rs  write_ply.rs  write_stl.rs
src/: lib.rs  manifold_rs.cpp  manifold_rs.h  output.rs
