# Copyright © 2024 The µCAD authors <info@ucad.xyz>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "manifold-rs"
version = "0.1.0"
description = "Rust wrapper for manifold"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "manifold_rs"
path = "src/lib.rs"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
