# Copyright © 2024 The µCAD authors <info@ucad.xyz>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "manifold-rs"
version = "0.2.0"
description = "Rust wrapper for manifold"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/WilstonOreo/manifold-rs"

include = [
    "README.md",
    "Cargo.toml",
    "build.rs",
    "LICENSE",
    "src/**/*",
    "manifold/CMakeLists.txt",
    "manifold/bindings/**/*",
    "manifold/cmake/*",
    "manifold/include/**/*",
    "manifold/src/**/*",
    "glm/CMakeLists.txt",
    "glm/glm/**/*",
    "glm/cmake/*",
]

[lib]
name = "manifold_rs"
path = "src/lib.rs"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"

[dev-dependencies]
cgmath = "0.18.0"
