# Copyright © 2024 The µCAD authors <info@ucad.xyz>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "manifold-rs"
version = "0.4.1"
description = "Rust wrapper for manifold"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/WilstonOreo/manifold-rs"

exclude = [
    "glm/doc/**/*",
    "glm/test/**/*",
    "manifold/docs/**/*",
    "manifold/test/**/*",
    "manifold/samples/**/*",
]

[lib]
name = "manifold_rs"
path = "src/lib.rs"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"

[dev-dependencies]
cgmath = "0.18.0"
